<resources>
    <string name="app_name">Deprecure</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb').
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>  -->

    <!-- Actions -->
    <string name="action_log_out">Log out</string>

    <!-- Depression test -->
    <string name="test_question">Over the last two weeks, how often have you been bothered by any of the following problems?</string>
    <string name="not_at_all">Not at all</string>
    <string name="several_days">Several days</string>
    <string name="more_than_half_the_days">More than half the days</string>
    <string name="nearly_every_day">Nearly every day</string>

    <!-- Add diary entry -->
    <string name="add_item_toolbar">Add diary entry</string>
    <string name="what_is_your_current_mood">What is your current mood?</string>
    <string name="add_item_activities_question">What have you been up to?</string>
    <string name="add_item_text_question">What are your thoughts?</string>
    <string name="add_item_text_question_hint">Thought</string>

    <!-- About activity -->
    <string name="smiles_pack_is_designed">Smiles pack is designed by Smartline from Flaticon.</string>
    <string name="about_udacity">This app is a capstone project for Android Developer Nanodegree from Udacity.</string>
    <string name="about_toolbar">About</string>

    <!-- Menu activity -->
    <string name="test_button">Test</string>
    <string name="diary_button">Diary</string>
    <string name="about_button">About</string>
    <string name="sign_in_or_register">Sign In or Register</string>

    <!-- Diary activity -->
    <string name="diary_toolbar">Diary</string>
    <string name="entry_activities_title">Activities:</string>
    <string name="entry_diary_title">Diary:</string>

    <!-- Widget -->
    <string name="widget_title">Track mood to diary</string>
    <string name="appwidget_text">Moods</string>
    <string name="add_widget">Add widget</string>

    <!-- ContentDescriptions -->
    <string name="cd_entry_mood_smile">Smile referencing to mood</string>
    <string name="cd_add_text">Text input for diary text</string>
    <string name="cd_radio_not_at_all">Button when the answer on question is not at all</string>
    <string name="cd_radio_several_days">Button when the answer on question is several days</string>
    <string name="cd_radio_more_than_half">Button when the answer on question is more than half days</string>
    <string name="cd_radio_nearly_every_day">Button when the answer on question is nearly every day</string>
    <string name="cd_logo_of_application">Logo of application</string>

    <!-- Depression result -->
    <string name="none_depression">None depression</string>
    <string name="none_depression_text">You\'re doing very well! Keep it up!</string>
    <string name="mild_depression">Mild depression</string>
    <string name="moderate_depression">Moderate depression</string>
    <string name="moderately_severe_depression">Moderately severe depression</string>
    <string name="severe_depression">Severe depression</string>
    <string name="depression_strong_comment">If you’re having a bad thoughts and you are thinking about hurting or killing yourself
        please reach out straight away and talk to someone who’s trained to help. Even if you feel like no-one in the world gets you right now, there are people who can support you.</string>
    <string name="depression_weak_comment">You\'re doing very well! Keep it up!</string>
    <string name="cd_item_mood">Smile of current mood</string>

    <!-- Depression test PHQ-9 questions -->
    <string-array name="test_questions">
        <item>Little interest or pleasure in doing things?</item>
        <item>Feeling down, depressed, or hopeless?</item>
        <item>Trouble falling or staying asleep, or sleeping too much?</item>
        <item>Feeling tired or having little energy?</item>
        <item>Poor appetite or overeating?</item>
        <item>Feeling bad about yourself - or that you are a failure or have let yourself or your family down?</item>
        <item>Trouble concentrating on things, such as reading the newspaper or watching television?</item>
        <item>Moving or speaking so slowly that other people could have noticed? Or the opposite - being so fidgety
            or restless that you have been moving around a lot more than usual?</item>
        <item>Thoughts that you would be better off dead, or of hurting yourself in some way?</item>
    </string-array>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>
