<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context="com.example.android.deprecure.ScreenTestSlideFragment">

    <TextView
        android:id="@+id/test_slide_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/test_answers_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <RadioButton
            android:id="@+id/radio_not_at_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_at_all"/>

        <RadioButton
            android:id="@+id/radio_several_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/several_days"/>

        <RadioButton
            android:id="@+id/radio_more_than_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_than_half_the_days"/>

        <RadioButton
            android:id="@+id/radio_nearly_every_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nearly_every_day"/>

    </RadioGroup>

</LinearLayout>
