<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.deprecure.AddItemToDiaryActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_item_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="@string/add_item_toolbar"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        android:elevation="4dp"/>

    <ScrollView
        android:id="@+id/add_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_below="@id/add_item_toolbar">

        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/add_mood_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/what_is_your_current_mood"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_mood_recyclerview"
            app:layout_constraintVertical_chainStyle="spread_inside"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/add_mood_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/add_mood_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_activity_question"/>

        <TextView
            android:id="@+id/add_activity_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/add_item_activities_question"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/add_mood_recyclerview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_activity_recyclerview"
            app:layout_constraintVertical_chainStyle="packed"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/add_activity_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/add_activity_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/add_text_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/add_item_text_question"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/add_activity_recyclerview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_text_edittext"
            />

        <EditText
            android:id="@+id/add_text_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_item_text_question_hint"
            android:inputType="text|textAutoComplete|textAutoCorrect|textCapSentences|textMultiLine"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/add_text_question"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/cd_add_text"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_item_to_diary_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_action_check_white"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:focusable="true"/>

</RelativeLayout>